--- a/template/base/package.json
+++ b/template/base/package.json
@@ -16,12 +16,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2",
-    "ts-node": "^10.9.1",
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.17",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
@@ -29,6 +27,9 @@
     "eslint": "^8.49.0",
     "nodemon": "^3.0.1",
     "prettier": "3.0.3",
-    "tsc-alias": "^1.8.7"
+    "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.7",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.2.2"
   }
 }
